--- a/DefendersDeck.App/DefendersDeck.App.csproj
+++ b/DefendersDeck.App/DefendersDeck.App.csproj
@@ -65,7 +65,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\DefendersDeck.Models\DefendersDeck.Domain.csproj" />
+	  <ProjectReference Include="..\DefendersDeck.Domain\DefendersDeck.Domain.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
