--- a/DefendersDeck.Business/DefendersDeck.Business.csproj
+++ b/DefendersDeck.Business/DefendersDeck.Business.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DefendersDeck.DataAccess\DefendersDeck.DataAccess.csproj" />
+    <ProjectReference Include="..\DefendersDeck.Domain\DefendersDeck.Domain.csproj" />
   </ItemGroup>
 
 </Project>
